--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rvandco",
-  "version": "1.2.5",
+  "version": "1.3.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,34 +9,34 @@
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.2",
-    "@fortawesome/free-brands-svg-icons": "^6.1.2",
-    "@fortawesome/free-solid-svg-icons": "^6.1.2",
-    "@fortawesome/vue-fontawesome": "^3.0.1",
-    "@splidejs/vue-splide": "^0.6.7",
-    "core-js": "^3.8.3",
-    "countup.js": "^2.3.2",
-    "vue": "^3.2.13",
-    "vue-i18n": "^9.2.2",
-    "vue-observe-visibility": "^2.0.0-alpha.1",
-    "vue-router": "^4.0.3"
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@splidejs/vue-splide": "^0.6.12",
+    "core-js": "^3.41.0",
+    "countup.js": "^2.8.2",
+    "vue": "^3.5.13",
+    "vue-i18n": "^9.14.4",
+    "vue-observe-visibility": "2.0.0-alpha.1",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@intlify/vue-i18n-loader": "^3.0.0",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@babel/core": "^7.26.10",
+    "@babel/eslint-parser": "^7.27.0",
+    "@intlify/vue-i18n-loader": "^3.3.0",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-plugin-router": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "node-sass": "^7.0.1",
-    "prettier": "^2.4.1",
-    "sass": "^1.32.7",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^8.7.1",
+    "node-sass": "^7.0.3",
+    "prettier": "^2.8.8",
+    "sass": "^1.87.0",
     "sass-loader": "^12.6.0",
-    "vue-cli-plugin-i18n": "~2.3.1"
+    "vue-cli-plugin-i18n": "~2.3.2"
   }
 }
