--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,24 @@
 # build output
 dist/
 
+# coverage output
+coverage/
+
+# fonts output
+public/__astro_font_generated__
+
 # generated types
 .astro/
 
 # dependencies
 node_modules/
+.pnpm-store/
 
 # logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-
-# environment variables
-.env
-.env.production
 
 # macOS-specific files
 .DS_Store
