--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/cloudflare": "^12.6.8",
+		"@astrojs/sitemap": "^3.5.1",
 		"astro": "^5.13.6",
 		"typescript": "^5.9.2"
 	},
