--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@astrojs/cloudflare": "^12.6.8",
 		"@astrojs/sitemap": "^3.5.1",
 		"astro": "^5.13.6",
+		"astro-meta-tags": "^0.4.0",
 		"typescript": "^5.9.2"
 	},
 	"devDependencies": {
