--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
 		"@astrojs/sitemap": "^3.5.1",
 		"astro": "^5.13.6",
 		"astro-compressor": "^1.1.2",
+		"astro-font": "^1.1.0",
 		"astro-icon": "^1.1.5",
 		"astro-meta-tags": "^0.4.0",
+		"astro-seo": "^0.8.4",
 		"typescript": "^5.9.2"
 	},
 	"devDependencies": {
