--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 	},
 	"private": true,
 	"type": "module",
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"scripts": {
 		"dev": "astro dev",
 		"check": "astro check",
@@ -32,20 +32,22 @@
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
-		"@iconify-json/fa6-brands": "^1.2.6",
-        "@iconify-json/mdi": "^1.2.3",
 		"@astrojs/cloudflare": "^12.6.8",
 		"@astrojs/sitemap": "^3.5.1",
+		"@iconify-json/fa6-brands": "^1.2.6",
+		"@iconify-json/mdi": "^1.2.3",
 		"astro": "^5.13.6",
 		"astro-compressor": "^1.1.2",
 		"astro-font": "^1.1.0",
 		"astro-icon": "^1.1.5",
 		"astro-meta-tags": "^0.4.0",
 		"astro-seo": "^0.8.4",
+		"countup.js": "^2.9.0",
 		"typescript": "^5.9.2"
 	},
 	"devDependencies": {
 		"@types/node": "^24.3.1",
+		"@vitest/coverage-v8": "3.2.4",
 		"sass-embedded": "^1.92.1",
 		"vitest": "^3.2.4",
 		"wrangler": "^4.34.0"
