--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
 		"@astrojs/sitemap": "^3.5.1",
 		"@iconify-json/fa6-brands": "^1.2.6",
 		"@iconify-json/mdi": "^1.2.3",
-		"astro": "^5.13.6",
+		"@splidejs/splide": "^4.1.4",
+		"astro": "^5.13.7",
 		"astro-compressor": "^1.1.2",
 		"astro-font": "^1.1.0",
 		"astro-icon": "^1.1.5",
@@ -50,7 +51,7 @@
 		"@vitest/coverage-v8": "3.2.4",
 		"sass-embedded": "^1.92.1",
 		"vitest": "^3.2.4",
-		"wrangler": "^4.34.0"
+		"wrangler": "^4.35.0"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
@@ -60,5 +61,5 @@
 			"workerd"
 		]
 	},
-	"packageManager": "pnpm@10.15.0"
+	"packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
 }
