--- a/package.json
+++ b/package.json
@@ -44,13 +44,14 @@
 		"astro-meta-tags": "^0.4.0",
 		"astro-seo": "^0.8.4",
 		"countup.js": "^2.9.0",
+		"sass": "^1.93.2",
 		"typescript": "^5.9.2"
 	},
 	"devDependencies": {
 		"@types/node": "^24.5.2",
 		"@vitest/coverage-v8": "3.2.4",
-		"sass-embedded": "^1.93.2",
 		"vitest": "^3.2.4",
+		"vite": "6.3.6",
 		"wrangler": "^4.40.1"
 	},
 	"pnpm": {
