--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -22,7 +22,8 @@
 	"kv_namespaces": [
 		{
 			"binding": "STORE",
-      		"id": "659e20388a8a4efb9401112221c73ac8"
+      		"id": "659e20388a8a4efb9401112221c73ac8",
+			"remote": true
 		}
 	]
 }
