--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"build": "astro build",
 		"test": "vitest run --coverage",
 		"coverage": "astro preview --root ./coverage",
-		"preview": "astro build && wrangler dev",
+		"preview": "astro build && wrangler dev --remote",
 		"deploy": "astro build && wrangler deploy",
 		"cf-typegen": "wrangler types"
 	},
