--- a/package.json
+++ b/package.json
@@ -31,29 +31,30 @@
 		"cf-typegen": "wrangler types"
 	},
 	"dependencies": {
-		"@astrojs/check": "^0.9.5",
-		"@astrojs/cloudflare": "^12.6.10",
+		"@astrojs/check": "^0.9.6",
+		"@astrojs/cloudflare": "^12.6.12",
 		"@astrojs/sitemap": "^3.6.0",
 		"@iconify-json/fa6-brands": "^1.2.6",
 		"@iconify-json/mdi": "^1.2.3",
 		"@plausible-analytics/tracker": "^0.4.4",
 		"@splidejs/splide": "^4.1.4",
-		"astro": "^5.15.5",
+		"astro": "^5.16.1",
 		"astro-compressor": "^1.2.0",
 		"astro-font": "^1.1.0",
 		"astro-icon": "^1.1.5",
 		"astro-meta-tags": "^0.4.0",
 		"astro-seo": "^0.8.4",
 		"countup.js": "^2.9.0",
-		"sass": "^1.94.0",
+		"sass": "^1.94.2",
 		"typescript": "^5.9.3"
 	},
 	"devDependencies": {
 		"@types/node": "^24.10.1",
 		"@vitest/coverage-v8": "3.2.4",
 		"vitest": "^3.2.4",
-		"wrangler": "^4.47.0"
+		"wrangler": "^4.51.0"
 	},
+	"packageManager": "pnpm@10.23.0",
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"@parcel/watcher",
@@ -61,6 +62,5 @@
 			"sharp",
 			"workerd"
 		]
-	},
-	"packageManager": "pnpm@10.22.0"
+	}
 }
